# reversi-othelo-ai

./: .clang-format.sample  .gitignore  CMakeLists.txt  board.cpp  board.hpp  human_player.cpp  human_player.hpp  main.cpp  minmax  option_parser.cpp  option_parser.hpp  player.hpp  sample_computer_player.cpp  sample_computer_player.hpp
player/: human_player.cpp  human_player.hpp  minmax_player.cpp  minmax_player.hpp  sample_computer_player.cpp  sample_computer_player.hpp
